--- a/package.json
+++ b/package.json
@@ -1,16 +1,14 @@
 {
-  "name": "rod-consulting",
+  "name": "rod",
   "private": true,
   "version": "0.0.0",
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.0",
-    "postcss": "^8.4.4",
-    "tailwindcss": "^2.2.19",
-    "vite": "^2.8.0"
+    "vite": "^3.2.0"
   }
 }
