--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "vite": "^3.2.0"
+    "vite": "^3.2.0",
+    "sass": "1.55.0"
   },
   "dependencies": {
+    "bootstrap": "^5.2.2",
     "bootstrap-icons": "^1.9.1"
   }
 }
