--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "@fancyapps/ui": "^4.0.31",
     "aos": "^3.0.0-beta.6",
     "bootstrap": "^5.2.2",
-    "bootstrap-icons": "^1.9.1",
-    "gh-pages": "^4.0.0"
+    "bootstrap-icons": "^1.9.1"
   }
 }
