--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "dev": "vite --host",
     "build": "vite build",
-    "preview": "vite preview --host",
-    "deploy:": "gh-pages -d dist"
+    "preview": "vite preview --host"
   },
   "devDependencies": {
     "sass": "1.55.0",
